--- a/easyJet/assets/css/style.css
+++ b/easyJet/assets/css/style.css
@@ -1,7 +1,7 @@
  /* ----Header style ------ */
  
  header {
-  background-image: url(/assets/img/headbar.gif);
+  background-image: url(/easyJet/assets/img/headbar.gif);
   background-size: cover;
   height: 60px;
   font-size: 16px;
