--- a/easyJet/assets/css/style.css
+++ b/easyJet/assets/css/style.css
@@ -37,7 +37,6 @@ header button {
 .container{
     width: 960px;
     margin: 0px auto;
-    /* border : 2px solid red; */
     box-shadow: 0 0 5px lightgrey;
 
 } 
@@ -180,18 +179,44 @@ h2 {
     
 }
 /* --------------Trip img---------------------- */
-.trip-imgs{
+.triple-imgs{
     
     display: flex;
     justify-content: space-around;
     margin-bottom: 50px;
     
-    
 }
 
-.trip-imgs img {
+.triple-imgs > div {
+    position: relative;
+}
+
+.triple-imgs-absolute {
+    position: absolute;
+    top: 0px;
     height: 220px;
-    width: 280px;
+    width: 285px;
+    padding: 20px;
+    color: #fff;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    
+     
+}
+
+.triple-imgs-absolute h4 {
+    font-size: 30px;  
+}
+ .triple-imgs-absolute p {
+    font-size: 20px;
+ }
+
+
+.triple-imgs img {
+height: 220px;
+width: 280px;
   box-shadow: 0 0 5px lightgrey;
   border-radius: 5px;
   display: block;
