--- a/easyJet/assets/css/style.css
+++ b/easyJet/assets/css/style.css
@@ -1,11 +1,14 @@
  /* ----Header style ------ */
- 
+ body {
+     font-family:"easyJet Rounded Book";
+     /* font-family: 'easyJet Rounded Demi'; */
+ }
  header {
   background-image: url(/easyJet/assets/imgs/headbar.gif);
   background-size: cover;
   height: 60px;
   font-size: 16px;
-  font-family: Arial, Helvetica, sans-serif;
+ 
   padding: 0px 20px;
   display: flex;
   justify-content: space-between;
