--- a/easyJet/assets/css/style.css
+++ b/easyJet/assets/css/style.css
@@ -1,5 +1,6 @@
  /* ----Header style ------ */
- body {
+ body, footer {
+    box-sizing: border-box;
      font-family:"easyJet Rounded Book";
  }
 
@@ -9,7 +10,6 @@
   font-family: 'easyJet Rounded Demi';
   height: 60px;
   font-size: 16px;
- 
   padding: 0px 20px;
   display: flex;
   justify-content: space-between;
@@ -57,12 +57,37 @@ h1, h2 , h3 {
 }
 
 /* ----- main ----- */
+.beach-section {
+    padding-bottom: 20px;
+    position: relative;
+}
+
 .beach-section img{
      width: 100vw;
     height: 650px;
     object-fit: cover;
     margin-bottom: 20px;
 }
+.beach-absolute {
+    position: absolute;
+    margin-top: 20px;
+    top: 0;
+    height: 430px;
+    width: 100vw;
+    /* border: 4px solid red; */
+   
+    
+}
+.booking-menu-container {
+    /* border: 4px solid green; */
+    height: 100%;
+  
+}
+/* .beach-section div:nth-child(2){
+    position: absolute;
+    border : 4px solid gr;
+    
+} */
 
 
 /* worldwide-default */
@@ -205,7 +230,6 @@ h1, h2 , h3 {
     width: 285px;
     padding: 20px;
     color: #fff;
-    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -250,7 +274,14 @@ width: 280px;
     background-color: #333;
     color: white;
     flex-shrink: 0;
-    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.icon {
+    font-size:  50px;
+    align-self: center;
 }
 .bottom-carrousel > menu {
    gap: 20px;
@@ -258,6 +289,7 @@ width: 280px;
    overflow: scroll;
    
 }
+
 /* --------------------------------------- */
 .carrousel-section::-webkit-scrollbar{
   
