--- a/easyJet/assets/css/booking-menu.css
+++ b/easyJet/assets/css/booking-menu.css
@@ -1,10 +1,21 @@
 * {
   box-sizing: border-box;
-  
 }
-body{
-   font-family: "easyJet Rounded Book";
+body {
+  font-family: "easyJet Rounded Book";
 }
+
+.booking-menu-container {
+  height: 100%;
+  display: flex;
+  /* border : 5px solid red; */
+  justify-content: space-between;
+}
+
+.left-column{
+  /* border: 4px solid orange; */
+}
+
 .booking-menu {
   /* margin-top: 200px; */
   height: 430px;
@@ -13,8 +24,8 @@ body{
   padding: 12px;
   font-size: 13px;
   background-color: #fff;
-  
-  margin-top: 100px;
+
+  /* margin-top: 100px; */
 }
 .checkbox {
   margin-bottom: 10px;
@@ -58,14 +69,14 @@ body{
   border-bottom: 1px solid lightgray;
   margin: 0 auto;
 }
-.date-picker > div:nth-child(odd)  {
+.date-picker > div:nth-child(odd) {
   padding: 7px;
   display: flex;
   gap: 5px;
 }
 /* ------------ */
 
-.quantity-seat div {
+.quantity div {
   padding: 2px;
   display: flex;
   justify-content: space-between;
@@ -74,14 +85,22 @@ body{
 button {
   color: #f70;
 }
-.quantity-seat button {
+.counter-div {
+  display: flex;
+  align-items: center;
+}
+
+.quantity button {
   background-color: unset;
   border: none;
   font-size: 20px;
 }
-.quantity-seat > div span {
+.quantity > div span {
   font-weight: bold;
   font-size: 20px;
+  display: block;
+  width: 30px;
+  text-align: center;
 }
 
 /* ----------- */
