Add last part of booking menu container

--- a/easyJet/assets/css/font.css
+++ b/easyJet/assets/css/font.css
@@ -24,3 +24,14 @@
     font-display: swap;
 }
 
+@font-face {
+    font-family: 'easyJet Headline';
+    src: url('../fonts/easyJetHeadline.woff') format('woff2'),
+        url('../fonts/easyJetHeadline.woff2') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+
+
