--- a/easyJet/assets/css/booking-menu.css
+++ b/easyJet/assets/css/booking-menu.css
@@ -8,13 +8,72 @@ body {
 .booking-menu-container {
   height: 100%;
   display: flex;
-  /* border : 5px solid red; */
+  /* border : 2px solid red; */
   justify-content: space-between;
 }
 
-.left-column{
-  /* border: 4px solid orange; */
+.left-column {
+  width: 280px;
+  /* border: 2px solid orange; */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  color: #fff;
 }
+.left-column-title {
+  font-size: 50px;
+  font-family: "easyJet Headline", sans-serif;
+}
+
+.left-column > div p:nth-child(2) {
+  font-size: 50px;
+}
+
+.left-column button {
+  padding: 10px 30px;
+  background: #f60;
+  color: #fff;
+  margin: 0 2px 0;
+  text-decoration: none;
+  border: none;
+  font-size: 16px;
+  border-radius: 2px;
+  align-self: flex-start;
+}
+
+.beach-white-absolute {
+  position: absolute;
+  bottom: 0px;
+  height: 130px;
+  width: 100vw;
+  margin-bottom: 43px;
+  background-color: rgb(255, 255, 255, 0.7);
+  
+}
+.container-white-bar {
+  height: 100%;
+  box-sizing: border-box;
+
+}
+.offers {
+  display: flex;
+  justify-content: space-around;
+  gap: 30px;
+}
+
+.offers button {
+  padding: 10px 30px;
+  background: #f70;
+  color: #fff;
+  margin: 0 2px 0;
+  text-decoration: none;
+  border: none;
+  font-size: 16px;
+  border-radius: 2px;
+  align-self: flex-start;
+}
+
+/* ------------ */
 
 .booking-menu {
   /* margin-top: 200px; */
